--- a/personal-universe/package.json
+++ b/personal-universe/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/head": "^1.1.23",
+    "swiper": "^9.2.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
