--- a/personal-universe/package.json
+++ b/personal-universe/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.10.0",
+    "@cloudinary/vue": "^1.11.2",
     "@vueuse/head": "^1.1.23",
     "swiper": "^9.2.3",
     "vue": "^3.2.47",
